--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,16 @@
 	text-align:center;
 }
 
+#site_nav
+{
+	margin-bottom:10px;
+}
+
+#site_nav ul li
+{
+	margin: 0px 30px 0px 30px;
+}
+
  ul { 
         margin: 0; 
         padding: 5px; 
@@ -63,3 +73,20 @@ div.desc
   width:240px;
   margin:2px;
   }
+
+#alumni_list
+{
+	margin-top: 20px;
+}
+
+#bio_title
+{
+	text-align:center;
+	margin-top:20px;
+}
+
+#project_title
+{
+	text-align:center;
+	margin-top:20px;
+}
