--- a/css/default.css
+++ b/css/default.css
@@ -46,8 +46,8 @@ ul li a:hover {
 div.img
   {
   /*margin:2px;*/
-	margin-left:25px;
-	margin-right:25px;
+	margin-left:5px;
+	margin-right:5px;
 	margin-top:20px;
   border:1px solid #000;
   height:auto;
@@ -89,4 +89,13 @@ div.desc
 {
 	text-align:center;
 	margin-top:20px;
+}
+
+.year p
+{
+	writing-mode: tb-rl;
+	-webkit-transform: rotate(270deg); 
+	-moz-transform: rotate(270deg);
+	margin-top:130px;
+	font-size: 20px;
 }
