--- a/css/sliderkit-core.css
+++ b/css/sliderkit-core.css
@@ -41,8 +41,8 @@
  *  Panels
  *---------------------------------*/
 .sliderkit .sliderkit-panel{z-index:1;position:absolute;overflow:hidden;}
-.sliderkit .sliderkit-panel-active{z-index:5;}
-.sliderkit .sliderkit-panel-old{z-index:4;}
+.sliderkit .sliderkit-panel-active{z-index:5; background:#ffffff;}
+.sliderkit .sliderkit-panel-old{z-index:0;}
 
 /* Panels > Overlay */
 .sliderkit .sliderkit-panel .sliderkit-panel-textbox{position:absolute;z-index:1;}
