--- a/css/sliderkit-demos.css
+++ b/css/sliderkit-demos.css
@@ -168,7 +168,7 @@
 /*---------------------------------
  *  Photos gallery > Vertical
  *---------------------------------*/
-.photosgallery-vertical{width:595px;height:335px; left:150px;}
+.photosgallery-vertical{width:745px;height:335px; left:0px;}
 
 /* Nav */
 .photosgallery-vertical .sliderkit-nav{top:0;right:0;width:95px;height:100%;background:#000;}
@@ -197,13 +197,13 @@
 .photosgallery-vertical .sliderkit-go-next{top:0;right:0;}
 
 /* Panel */
-.photosgallery-vertical .sliderkit-panel{top:0;left:0;width:500px;height:335px; background: #fff;}
+.photosgallery-vertical .sliderkit-panel{top:0;left:0;width:650px;height:335px; background: #fff;}
 
 /* Panel > Textbox */
-.photosgallery-vertical .sliderkit-panel .sliderkit-panel-textbox{bottom:0;left:0;height:85px;width:500px;}
-.photosgallery-vertical .sliderkit-panel .sliderkit-panel-text{height:65px;padding:10px 15px 10px 115px;font-size:0.9em;color:#fff;}
+.photosgallery-vertical .sliderkit-panel .sliderkit-panel-textbox{bottom:0;left:0px;height:335px;width:150px;}
+.photosgallery-vertical .sliderkit-panel .sliderkit-panel-text{height:335px;width:150px;left:0;padding:0px 0px 0px 0px;font-size:1.1em;color:#fff;}
 .photosgallery-vertical .sliderkit-panel .sliderkit-panel-text h4{height:auto;margin:0 0 7px;line-height:1.1em;font-size:1.1em;font-weight:bold;border:none;}
-.photosgallery-vertical .sliderkit-panel .sliderkit-panel-overlay{height:85px;width:500px;background:#000;opacity:0.6;}
+.photosgallery-vertical .sliderkit-panel .sliderkit-panel-overlay{height:335px;width:150px;background:#000;}
 
 /*---------------------------------
  *  Photos gallery > Minimalistic
