--- a/css/default.css
+++ b/css/default.css
@@ -69,8 +69,7 @@ ul li {
 } 
 
 #site_nav ul li a:hover {
-    color: #000;
-    background-color: #fff;
+    color: #7d74ad;
 }
 
 #year_nav
@@ -99,13 +98,18 @@ div.img
     margin-left:5px;
     margin-right:5px;
     margin-top:20px;
-    border:1px solid #000;
     height:228px;
     width:228px;
     overflow: hidden;
     float:left;
     text-align:center;
-    padding:10px;
+    padding:0px 22px 10px 0px;
+    background-color: white;
+}
+
+div.img:hover
+{
+    opacity: .8;
 }
 div.img img
 {
@@ -167,6 +171,6 @@ div.desc
     writing-mode: tb-rl;
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
-    margin-top:100px;
+    margin-top:85px;
     font-size: 40px;
 }
