--- a/css/sliderkit-core.css
+++ b/css/sliderkit-core.css
@@ -24,7 +24,7 @@
 /*---------------------------------
  *  Navigation
  *---------------------------------*/
-.sliderkit .sliderkit-nav{z-index:10;position:absolute;text-align:center;}
+.sliderkit .sliderkit-nav{z-index:10;position:absolute;text-align:center;left:800px;}
 
 /* Nav > Clip */
 .sliderkit .sliderkit-nav-clip{position:relative;overflow:hidden;margin:0 auto;}
