--- a/css/default.css
+++ b/css/default.css
@@ -105,6 +105,8 @@ div.img
     text-align:center;
     padding:0px 22px 10px 0px;
     background-color: white;
+    position: relative;
+    border-radius: 5px;
 }
 
 div.img:hover
@@ -173,4 +175,39 @@ div.desc
     -moz-transform: rotate(270deg);
     margin-top:85px;
     font-size: 40px;
+}
+
+.details {
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.87);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    border-radius: 0 0 5px 5px;
+    border-top: 1px solid #FFFFFF;
+    bottom: 0;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.35);
+    padding: 5px 10px 10px 10px;
+    position: absolute;
+    width: 230px;
+    height: 12px;
+    text-align: left;
+}
+.details h3 {
+    font-weight: 100;
+    letter-spacing: -1px;
+    margin-bottom: 0;
+    margin-top: -7px;
+    color: #666;
+}
+.details a.more {
+    background-color: rgba(0, 0, 0, 0.03);
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.15) inset, 0 1px 0 rgba(255, 255, 255, 0.6);
+    font-size: 12px;
+    padding: 6px 10px;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+.details a.more:hover {
+    background-color: #0090E2;
+    color: #FFFFFF;
 }
